# linelights

./: Cargo.toml  aabb_test.frag  analytic.frag  better_test_scene.glb  debug.frag  plain.frag  simple_shader.frag  simple_shader.vert  stochastic.frag  test.vert
models/: clipping_test.glb  dragon_small_64.glb  grating_test.glb
shaders/: aabb_test.vert  analytic.frag  analytic_brute.frag  analytic_grid.frag  debug.frag  debugger.frag  prelude.frag  simple_shader.vert  stochastic.frag  test.vert
src/: acceleration.rs  datatypes.rs  input_handling.rs  linelight_vk.rs  main.rs  scene_loading.rs
