[package]
name = "linelights"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.3"
ash-window = "0.12.0"
glam = "0.24.1"
raw-window-handle = "0.5.2"
tobj = "4.0.0"
vk_engine = {git = "https://github.com/WorstWizard/vk_engine.git", branch = "linelights", features = ["shader_compilation"]}
winit = "0.28.6"
cstr = "0.2"
gltf = "1.3.0"
tracy-client = "0.16.4"
tracy-client-sys = "0.22.0"
image = "0.24.7"

[features]
gpu_trace = []